book/_build/html/reports/content/iam/systdyn/LTG-Explanation.err.log
Traceback (most recent call last):
  File "/Users/danypineault/anaconda3/lib/python3.11/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/danypineault/anaconda3/lib/python3.11/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/danypineault/anaconda3/lib/python3.11/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/danypineault/anaconda3/lib/python3.11/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/danypineault/anaconda3/lib/python3.11/asyncio/base_events.py", line 653, in run_until_complete
    return future.result()
           ^^^^^^^^^^^^^^^
  File "/Users/danypineault/anaconda3/lib/python3.11/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/danypineault/anaconda3/lib/python3.11/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/danypineault/anaconda3/lib/python3.11/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
BR BIRTH RATE (PEOPLE/YEAR)
BRCM BIRTH-RATE-FROM-CROWDING MULTIPLIER (DIMENSIONLESS)
BRCMT BIRTH-RATE-FROM-CROWDING-MULTIPLIER TABLE
8RFM BIRTH-RATE-FROM-FOOD MULTIPLIER (DIMENSIONLESS)
BRFMT BIRTH-RATE-FROM-FOOD-MULTIPLIER TABLE
BRMM BIRTH-RATE-FROM-MATERIAL MULTIPLIER (DIMENSIONLESS)
BRMMT BIRTH-RATE-FROM-MATERIAL-MULTIPLIER TABLE
BRN BIRTH RATE NORMAL (FRACTION/YEAR)
BRNI BIRTH RATE NORMAL NO. I (FRACTION/ YEAR)
BRPM BIRTH-RATE-FROM-POLLUTION MULTIPLIER (DIMENSIONLESS)
BRMT BIRTH-RATE-FROM-POLLUTION-MULTIPLIER TABLE
CFIFR CAPITAL FRACTION INDICATED BY FOOD RATIO (DIMENSIONLESS)
CF1FRT CAPITAL-FRACTION-INDICATED-BY-FOOD-RATIO TABLE
Ci CAPITAL INVESTMENT (CAPITAL UNITS)
CIAF CAPITAL-INVESTMENT-IN-AGRICULTURE FRACTION (DIMENSIONLESS)
CIAFI CAPITAL-INVESTMENT-IN-AGRICULTURE FRACTION, INITIAL
(DIMENSIONLESS)
CIAFN CAPITAL-INVESTMENT-IN-AGRICULTURE FRACTION NORMAL
(DIMENSIONLESS)
CIAFT CAPITAL-INVESTMENT-IN-AGRICULTURE-FRACTION ADJUSTMENT TIME
(YEARS)
CID CAPITAL-INVESTMENT DISCARD (CAPITAL UNITS/YEAR)
CIDN CAPITAL- INVESTMENT
DISCARD NORMAL (FRACTION/YEAR)
CIDNI CAPITAL- INVESTMENT
DISCARD NORMAL NO. 1 (FRACTION/YEAR)
CIG CAPITAL-INVESTMENT GENERATION (CAPITAL UNITS/YEAR)
CIGN CAPITAL-INVESTMENT GENERATION NORMAL
(CAPITAL UNITS/PERSON/YEAR)
CIGNI CAPITAL- INVESTMENT GENERATION NORMAL NO. 1
(CAPITAL UNITS/PERSON/YEAR>
C:! CAPITAL INVESTMENT, INITIAL (CAPITAL UNITS)
CIM CAPITAL-INVESTMENT
MULTIPLIER (DIMENSIONLESS)
CIMT CAPITAL-INVESTMENT-MULTIPLIER TABLE
CIQR CAPITAL-INVESTMENT-FROM-QUALITY RATIO (DIMENSIONLESS)
C1QRT CAPITAL-INVESTMENT-FROM-QUALITY-RATIO TABLE
CIR CAPITAL-INVESTMENT RATIO (CAPITAL UNITS/PERSON)
CIRA CAPITAL-INVESTMENT RATIO IN AGRICULTURE
(CAPITAL UNITS/PERSON)
CLIP LOGICAL FUNCTION USED AS A TIME SWITCH TO CHANGE
CR PARAMETER VALUE
CROWDING RATIO (DIMENSIONLESS)
DR DEATH RATE (PEQPLE/YEAR)
ÄRCM DEATH-RATE-FROM-CROWDING MULTIPLIER (DIMENSIONLESS)
DRCMT DEATH-RATE-FROM-CROWDING-MULTIPLIER TABLE
ORFM DEATH-RATE-FROM-FOOD MULTIPLIER (DIMENSIONLESS)
ORMT DEATH-RATE-FROM-FOOD-MULTIPLIER TABLE

DRAM
DRMMT
DRN
DRNI
ORPM
DRPMT
ECIR
ECIRN
FC
FC1
FCM
FCMT
FN
FPC 1
FPCIT
FPM
FPMT
FR LA
MSL
NR
NREM
NREMT
NRFR
NRI NRMM
NRMMT
NRUN
NRUN1
NRUR
PON PI
PLSWT
PLTP1
PLT?2
PLTPER
POL POLA
POLAT
POLATT POLCM
POLCMT
POLG POLI POLN POLNI POLR
POLS PRSWT
PRTPI
PRTP2
PRTPER
QL
QLC
QLCT
QLF
QLFT
QLM
QLMT
QLP
QLPT
QLS
SWT1
SWT2
SWT3
SWT 4
SWT5
SWT6
DEATH-RATE-FROM-MATERIAL MULTIPLIER (DIMENSIONLESS)
DEATH-RATE-FROM-MATERIAL-MULTIPLIER TABLE
DEATH RATE NORMAL (FRACTION/YEAR)
DEATH RATE NORMAL NO. I (FRACTION/YEAR)
DEATH-RATE-FROM-POLLUTION MULTIPLIER (DIMENSIONLESS)
DEATH-RATE-FROM-POLLUTION-MULTIPLIER TABLE
EFFECTIVE-CAPITAL-INVESTMENT RATIO (CAPITAL UNITS/PERSON)
EFFECTIVE-CAPITAL-INVESTMENT RATIO NORMAL
(CAPITAL UNITS/PERSON)
FOOD COEFFICIENT (DIMENSIONLESS)
FOOD COEFFICIENT NO. I (DIMENSIONLESS) FOOD-FROM-CROWDING MULTIPLIER (DIMENSIONLESS) FOOD-FROM-CROWDING-MULTIPLIER TABLE FOOD NORMAL (FOOD UNITS/PERSON/YEAR) FOOD POTENTIAL FROM CAPITAL INVESTMENT (FOOD UNITS/PERSON/YEAR)
FOOD-POTENTIAL-FROM-CAPITAL-INVESTMENT TABLE
FOOD-FROM-POLLUTION MULTIPLIER (DIMENSIONLESS)
FOOD-FROM-POLLUTION-MULTIPLIER TABLE
FOOD RATIO (DIMENSIONLESS)
LAND AREA (SQUARE KILOMETERS)
MATERIAL STANDARD OF LIVING (DIMENSIONLESS)
NATURAL RESOURCES (NATURAL RESOURCE UNITS)
NATURAL-RESOURCE-EXTRACTION MULTIPLIER (DIMENSIONLESS)
NATURAL-RESOURCE-EXTRACTION-MULTIPLIER TABLE
NATURAL-RESOURCE FRACTION REMAINING (DIMENSIONLESS) NATURAL RESOURCES, INITIAL (NATURAL-RESOURCE UNITS) NATURAL-RESOURCE-FROM-MATERIAL MULTIPLIER (DIMENSIONLESS) NATURAL-RESOURCE-FROM-MATERIAL-MULTIPLIER TABLE NATURAL-RESOURCE USAGE NORMAL
(NATURAL RESOURCE UNITS/PERSON/YEAR)
NATURAL-RESOURCE USAGE NORMAL NO. 1
(NATURAL RESOURCE UNITS/PERSON/YEAR)
NATURAL-RESOURCE-USAGE RATE (NATURAL RESOURCE UNITS/YEAR)
POPULATION (PEOPLE)
POPULATION DENSITY NORMAL (PEOPLE/SQUARE KILOMETER)
POPULATION, INITIAL (PEOPLE) PLOT SWITCH TIME (YEARS) PLOT PERIOD NO. 1 (YEARS) PLOT PERIOD NO.
2 (YEARS>
PLOT PERIOD (YEARS)
POLLUTION (POLLUTION UNITS)
POLLUTION ABSORPTION (POLLUTION UNITS/YEAR)
POLLUTION-ABSORPTION TIME (YEARS)
POLLUTION-ABSORPTION-TIME TABLE
POLLUTION-FROM-CAPITAL MULTIPLIER (DIMENSIONLESS) POLLUTION-FROM-CAP|TAL-MULTIPLIER TABLE
POLLUTION GENERATION (POLLUTION UNITS/YEAR)
POLLUTION, INITIAL (POLLUTION UNITS) POLLUTION NORMAL (POLLUTION UNITS/PERSON/YEAR) POLLUTION NORMAL NO. I (POLLUTION UNITS/PERSON/YEAR) POLLUTION RATIO (DIMENSIONLESS) POLLUTION STANDARD (POLLUTION UNITS) PRINT SWITCH TIME (YEARS) PRINT PERIOD NO. 1 (YEARS) PRINT PERIOD NO. 2 (YEARS) PRINT PERIOD (YEARS)
QUALITY OF LIFE (SATISFACTION UNITS)
QUALITY OF LIFE FROM CROWDING (DIMENSIONLESS)
QUALITY-OF-LIFE-FROM-CROWDING TABLE
QUALITY OF LIFE FROM FOOD (DIMENSIONLESS)
QUALITY-OF-LIFE-FROM-FOOD TABLE
QUALITY OF LIFE FROM MATERIAL (DIMENSIONLESS)
QUALITY-OF-LIFE-FROM-MATERIAL TABLE
QUALITY OF LIFE FROM POLLUTION (DIMENSIONLESS)
QUALITY-OF-LIFE-FROM-POLLUTION TABLE
QUALITY-OF-LIFE STANDARD (SATISFACTION UNITS)
SWITCH TIME NO. I FOR BRN (YEARS) 
SWITCH TIME NO.2 FOR NRUN (YEARS)
SWITCH TIME NO.3 FOR DRN (YEARS)
SWITCH TIME NO.4 FOR CIGN (YEARS)
SWITCH TIME NO.5 FOR CIDN (YEARS)
SWITCH TIME NO.6 FOR POLN (YEARS)

SWT7 SWITCH TIME NO. 7 FOR FC (YEARS)
TABHL LOGICAL FUNCTION, TABLE LOOK UP AND INTERPOLATION
TABLE LOGICAL FUNCTION, TABLE LOOK UP AND INTERPOLATION
TIME CALENDAR TIME (YEARS)
------------------

[0;36m  Cell [0;32mIn[1], line 4[0;36m[0m
[0;31m    8RFM BIRTH-RATE-FROM-FOOD MULTIPLIER (DIMENSIONLESS)[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid decimal literal

SyntaxError: invalid decimal literal (3722121888.py, line 4)

